# ulalaca-xrdp

./: ClipboardChannel.cpp  ClipboardChannel.hpp  ClipboardEntry.cpp  ClipboardEntry.hpp  IPCConnection.cpp  IPCConnection.hpp  IPCConnection.template.cpp  IPCConnection.workerloop.cpp  KeycodeMap.cpp  KeycodeMap.hpp  Makefile.am  ProjectionContext.hpp  ProjectionTarget.hpp  ProjectionThread.cpp  ProjectionThread.hpp  ProjectorClient.cpp  ProjectorClient.hpp  README.md  SessionBrokerClient.cpp  SessionBrokerClient.hpp  SocketStream.cpp  SocketStream.hpp  SystemCallException.hpp  ULCGTextRenderer.cpp  ULCGTextRenderer.hpp  ULSurface.cpp  ULSurface.hpp  UlalacaMessages.hpp  UnixSocket.cpp  UnixSocket.hpp  Utility.cpp  Utility.hpp  XrdpChannelEvent.cpp  XrdpChannelEvent.hpp  XrdpEvent.cpp  XrdpEvent.hpp  XrdpStream.cpp  XrdpStream.hpp  XrdpStream.template.cpp  XrdpTransport.cpp  (+9 more)
channels/: XrdpChannelBase.cpp  XrdpChannelBase.hpp  XrdpChannelEvent.cpp  XrdpChannelEvent.hpp
channels/clipboard/: ClipboardChannel.cpp  ClipboardChannel.hpp  ClipboardEntry.cpp  ClipboardEntry.hpp
messages/: projector.h
tests/: Makefile.am  MockedUnixSocket.cpp  MockedUnixSocket.hpp  test_copyrects.cpp  test_ipc.cpp
